<resources>
    <string name="app_name">COALERT</string>
    <string name="title_activity_mypage">mypageActivity</string>
    <string name="title_search">SEARCH</string>
    <string name="title_add_review">REVIEW</string>
    <string name="title_home">HOME</string>
    <string name="title_bad_elements">BAD ELEMENTS</string>
    <string name="title_mypage">MYPAGE</string>
    <string name="title_activity_sample">sampleActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="dry_skin">건성 피부</string>
    <string name="oily_skin">지성 피부</string>
    <string name="normal_skin">중성 피부</string>
    <string name="combination_skin">복합성 피부</string>
    <string name="sensitive_skin">민감성 피부</string>


    <string name="detail_bad_elements">나쁜 요소 자세히 보기--></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="allergy">알러지</string>
    <string name="trouble">트러블</string>
    <string name="other_troubles">기타</string>

    <string name="company_name">회사이름</string>
    <string name="product_name">제품 이름</string>
    <string name="detail_review">자세한 리뷰 쓰기</string>

    <string name="user_name">Koala</string>
    <string name="element_suitability">100</string>
    <string name="다음" />
    <string name="initial_word_progressing">초기 설정 단계입니다.\n 데이터를 수집합니다...</string>
    <string name="precious_words">불확실한 믿음보다는\n 명료한 지식이 낫다.\n\n 너의 피부를 디자인하라.</string>
</resources>
