<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_add_review"
        android:icon="@drawable/add"
        android:title="@string/title_add_review" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_bad_elements"
        android:icon="@drawable/bad_medicine"
        android:title="@string/title_bad_elements" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/person"
        android:title="@string/title_mypage" />

</menu>
