<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/appBackground">

    <TextView
        style="@style/appHeadTitle"
        android:text="화장품 평가" />

    <ImageView
        android:id="@+id/evaluation_prod_pic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.65"
        android:src="@drawable/suncream_default" />

    <TextView
        android:id="@+id/evaluation_product_name"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/product_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/evaluation_company_name"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/company_name"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/fisrt_eveluation_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:progressDrawable="@drawable/special_rating_bar_full"
        android:rating="3"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23" />

        <Button
            android:id="@+id/evaluation_allergy"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:background="@drawable/button_background"
            android:text="@string/allergy"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/evaluation_troubles"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:background="@drawable/button_background"
            android:text="@string/trouble"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/evaluation_others"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:background="@drawable/button_background"
            android:text="@string/other_troubles"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/evaluation_confirmed_button"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:background="@drawable/round_button_background"
        android:text="확인"
        android:textSize="18sp" />
</LinearLayout>