<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mainColor"
        android:orientation="horizontal">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_button_background" />

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/bmjua"
            android:gravity="center"
            android:text="제품 상세"
            android:textSize="24sp" />
        <!--textview 애니메이션 고려-->
        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:clickable="true"
            android:gravity="center"
            android:text="리뷰 하기" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_information_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/suncream" />

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_name"
                android:textSize="18sp" />

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_information_user_name"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textSize="20sp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="님께 "
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/product_information_suitability"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/element_suitability"
                    android:textSize="20sp" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="% 적합해요!"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/product_information_bad_ingredients_confirmation"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:text="주의 성분 확인"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="간단 리뷰"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="화장품 사는 것에 회희적이었는데 이 화장품은 저에게 안 좋은 성분들이 없는 화장품이라 그런지 저에게 딱 맞는 제품이에요^^"
                android:padding="5dp"
                android:background="@drawable/search_view_edge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="일반적인 썬크림은 너무 끈적한 느낌이들어서 별로였는데 이 제품은 산뜻하고 좋은것 같아요!"
                android:background="@drawable/search_view_edge"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="자세한 리뷰"
                    style="@style/textStyle"
                    android:textSize="22sp"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:background="@drawable/left"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>